Remove reputation system
