# lib/api-server.js
@@ -27,7 +27,6 @@ const apiHashes = require('./endpoints/hashes.js')
 const apiCalendar = require('./endpoints/calendar.js')
 const apiProofs = require('./endpoints/proofs.js')
 const apiVerify = require('./endpoints/verify.js')
-const apiReputation = require('./endpoints/reputation.js')
 const apiConfig = require('./endpoints/config.js')
 const apiStats = require('./endpoints/stats.js')
 
@@ -295,24 +294,6 @@ function setupCommonRestifyConfigAndRoutes(server) {
     { path: '/verify', version: '2.0.0' },
     ...applyMiddleware([throttle(15, 5)]),
     apiVerify.postProofsForVerificationAsync
-  )
-  // get a range of reputation items by ids, inclusive
-  server.get(
-    { path: '/reputation/:min/:max', version: '2.0.0' },
-    ...applyMiddleware([throttle(1, 0.5)]),
-    apiReputation.getReputationDataRangeByIdsAsync
-  )
-  // get the reputation item for the specified id
-  server.get(
-    { path: '/reputation/:id', version: '2.0.0' },
-    ...applyMiddleware([throttle(1, 0.5)]),
-    apiReputation.getReputationDataByIdAsync
-  )
-  // get the most recent reputation items
-  server.get(
-    { path: '/reputation/recent', version: '2.0.0' },
-    ...applyMiddleware([throttle(1, 0.5)]),
-    apiReputation.getRecentReputationDataAsync
   )
   // get configuration information for this Node
   server.get({ path: '/config', version: '2.0.0' }, ...applyMiddleware([throttle(1, 1)]), apiConfig.getConfigInfoAsync)
