# lib/models/RocksDB.js
@@ -44,7 +44,6 @@ const prefixBuffers = {
   REP_ITEM_ID_INDEX: Buffer.from('b1c2', 'hex'),
   REP_ITEM_PROOF_VALUE: Buffer.from('b1c3', 'hex')
 }
-const MOST_RECENT_REP_ITEM_KEY_BINARY_KEY = Buffer.from('repitems:mostrecent')
 const RECENT_HASH_DATA_BINARY_KEY = Buffer.from('nodestats:last25:hashes')
 const NODE_STATS_COUNTER_MIN_BINARY_KEY = Buffer.from('nodestats:counter:')
 const NODE_STATS_COUNTER_MAX_BINARY_KEY = Buffer.from('nodestats:counter:~')
@@ -98,16 +97,6 @@ const recentHashDataSchema = new JSBinaryType([
     submittedAt: 'date'
   }
 ])
-
-const reputationItemSchema = new JSBinaryType({
-  id: 'Buffer',
-  calBlockHeight: 'Buffer',
-  calBlockHash: 'Buffer',
-  prevRepItemHash: 'Buffer',
-  hashIdNode: 'Buffer',
-  repItemHash: 'Buffer',
-  signature: 'Buffer'
-})
 
 // #endregion SCHEMAS
 
@@ -460,226 +449,6 @@ async function saveRecentHashDataAsync(recentHashDataObjects) {
 // #endregion EVENT METRICS FUNCTIONS
 
 /****************************************************************************************************
- * REPUTATION ITEM FUNCTIONS
- ****************************************************************************************************/
-// #region REPUTATION ITEM FUNCTIONS
-
-function createBinaryReputationItemNowValueKey(id) {
-  let timestampBuffer = Buffer.alloc(8)
-  timestampBuffer.writeDoubleBE(Date.now())
-  // include idBuffer to ensure order by id as well as date
-  let idBuffer = Buffer.alloc(8)
-  idBuffer.writeDoubleBE(id)
-  let rndBuffer = crypto.randomBytes(8)
-  return Buffer.concat([prefixBuffers.REP_ITEM_VALUE, timestampBuffer, idBuffer, rndBuffer])
-}
-
-function createBinaryReputationItemTimeIndexMin(minTimestamp) {
-  // generate the minimum key value for range query
-  let timestampBuffer = Buffer.alloc(8)
-  timestampBuffer.writeDoubleBE(minTimestamp)
-  let minBoundsBuffer = Buffer.alloc(16, 0)
-  return Buffer.concat([prefixBuffers.REP_ITEM_VALUE, timestampBuffer, minBoundsBuffer])
-}
-
-function createBinaryReputationItemTimeIndexMax(maxTimestamp) {
-  // generate the maximum key value for range query up to given timestamp
-  let timestampBuffer = Buffer.alloc(8)
-  timestampBuffer.writeDoubleBE(maxTimestamp)
-  let rndBuffer = Buffer.alloc(16, 'ff', 'hex')
-  return Buffer.concat([prefixBuffers.REP_ITEM_VALUE, timestampBuffer, rndBuffer])
-}
-
-function createBinaryReputationItemIdIndexKey(id) {
-  let idBuffer = Buffer.alloc(8)
-  idBuffer.writeDoubleBE(id)
-  return Buffer.concat([prefixBuffers.REP_ITEM_ID_INDEX, idBuffer])
-}
-
-function createBinaryReputationItemProofValueKey(id) {
-  let idBuffer = Buffer.alloc(8)
-  idBuffer.writeDoubleBE(id)
-  return Buffer.concat([prefixBuffers.REP_ITEM_PROOF_VALUE, idBuffer])
-}
-
-function getIdFromProofValueKey(key) {
-  return key.readDoubleBE(2)
-}
-
-function encodeReputationItemValue(reputationItem) {
-  let id = Buffer.alloc(4)
-  id.writeUInt32BE(reputationItem.id)
-  let calBlockHeight = Buffer.alloc(4)
-  calBlockHeight.writeUInt32BE(reputationItem.calBlockHeight)
-  let repObj = {
-    id: id,
-    calBlockHeight: calBlockHeight,
-    calBlockHash: Buffer.from(reputationItem.calBlockHash, 'hex'),
-    prevRepItemHash: Buffer.from(reputationItem.prevRepItemHash, 'hex'),
-    hashIdNode: Buffer.from(reputationItem.hashIdNode.replace(/-/g, ''), 'hex'),
-    repItemHash: Buffer.from(reputationItem.repItemHash, 'hex'),
-    signature: Buffer.from(reputationItem.signature.substring(2), 'hex') // omit the leading `0x`
-  }
-  return reputationItemSchema.encode(repObj)
-}
-
-function decodeReputationItemValue(reputationItemValue) {
-  let repObj = reputationItemSchema.decode(reputationItemValue)
-  let reputationItem = {
-    id: repObj.id.readUInt32BE(),
-    calBlockHeight: repObj.calBlockHeight.readUInt32BE(),
-    calBlockHash: repObj.calBlockHash.toString('hex'),
-    prevRepItemHash: repObj.prevRepItemHash.toString('hex'),
-    hashIdNode: hexToUUIDv1(repObj.hashIdNode.toString('hex')),
-    repItemHash: repObj.repItemHash.toString('hex'),
-    signature: `0x${repObj.signature.toString('hex')}`
-  }
-  return reputationItem
-}
-
-async function getReputationItemsBetweenAsync(minTimestamp, maxTimestamp) {
-  return new Promise((resolve, reject) => {
-    let minKey = createBinaryReputationItemTimeIndexMin(minTimestamp)
-    let maxKey = createBinaryReputationItemTimeIndexMax(maxTimestamp)
-    let results = []
-    db.createReadStream({ gte: minKey, lte: maxKey })
-      .on('data', async data => {
-        let reputationItem = decodeReputationItemValue(data.value)
-        results.push(reputationItem)
-      })
-      .on('error', error => {
-        let err = `Error during reputation item retrieval : ${error.message}`
-        return reject(err)
-      })
-      .on('end', async () => {
-        return resolve(results)
-      })
-  })
-}
-
-async function getMostRecentReputationItemAsync() {
-  try {
-    let mostRecentReputationItemKey = await db.get(MOST_RECENT_REP_ITEM_KEY_BINARY_KEY)
-    let mostRecentReputationItemValue = await db.get(mostRecentReputationItemKey)
-    let mostRecentReputationItem = decodeReputationItemValue(mostRecentReputationItemValue)
-    return mostRecentReputationItem
-  } catch (error) {
-    if (error.notFound) {
-      return null
-    } else {
-      let err = `Unable to read most recent reputation item : ${error.message}`
-      throw err
-    }
-  }
-}
-
-async function getReputationItemByIdAsync(id) {
-  try {
-    let indexKey = createBinaryReputationItemIdIndexKey(id)
-    let key = await db.get(indexKey)
-    let reputationItem = await db.get(key)
-    return decodeReputationItemValue(reputationItem)
-  } catch (error) {
-    if (error.notFound) {
-      return null
-    } else {
-      let err = `Error reading reputation item by id : ${error.message}`
-      throw err
-    }
-  }
-}
-
-async function getReputationItemsRangeByIdsAsync(minId, maxId) {
-  return new Promise(async (resolve, reject) => {
-    let valueKeys = []
-    let minIndexKey = createBinaryReputationItemIdIndexKey(minId)
-    let maxIndexKey = createBinaryReputationItemIdIndexKey(maxId)
-    db.createReadStream({ gte: minIndexKey, lte: maxIndexKey })
-      .on('data', async data => {
-        valueKeys.push(data.value)
-      })
-      .on('error', error => {
-        let err = `Error reading reputation item range : ${error.message}`
-        return reject(err)
-      })
-      .on('end', async () => {
-        let results = []
-        for (let key of valueKeys) {
-          let value = await db.get(key)
-          results.push(decodeReputationItemValue(value))
-        }
-        return resolve(results)
-      })
-  })
-}
-
-async function saveReputationItemAsync(reputationItem) {
-  let ops = []
-  let reputationItemValueKey = createBinaryReputationItemNowValueKey(reputationItem.id)
-  let reputationItemValue = encodeReputationItemValue(reputationItem)
-  let reputationItemIdIndexKey = createBinaryReputationItemIdIndexKey(reputationItem.id)
-  ops.push({ type: 'put', key: reputationItemValueKey, value: reputationItemValue })
-  ops.push({ type: 'put', key: MOST_RECENT_REP_ITEM_KEY_BINARY_KEY, value: reputationItemValueKey })
-  ops.push({ type: 'put', key: reputationItemIdIndexKey, value: reputationItemValueKey })
-  try {
-    await db.batch(ops)
-  } catch (error) {
-    let err = `Unable to write new reputation item : ${error.message}`
-    throw err
-  }
-}
-
-async function saveReputationItemProofAsync(repId, proofString) {
-  let reputationItemProofValueKey = createBinaryReputationItemProofValueKey(repId)
-  let reputationItemProofValue = Buffer.from(proofString, 'utf8')
-  try {
-    await db.put(reputationItemProofValueKey, reputationItemProofValue)
-  } catch (error) {
-    let err = `Unable to write new reputation item proof : ${error.message}`
-    throw new Error(err)
-  }
-}
-
-async function getReputationItemProofByRepIdAsync(repId) {
-  try {
-    let key = createBinaryReputationItemProofValueKey(repId)
-    let proof = await db.get(key)
-    return proof.toString()
-  } catch (error) {
-    if (error.notFound) {
-      return null
-    } else {
-      let err = `Error reading reputation item proof by repId : ${error.message}`
-      throw err
-    }
-  }
-}
-
-async function getReputationItemProofsRangeByRepIdsAsync(minRepId, maxRepId) {
-  return new Promise(async (resolve, reject) => {
-    let results = []
-    let minValueKey = createBinaryReputationItemProofValueKey(minRepId)
-    let maxValueKey = createBinaryReputationItemProofValueKey(maxRepId)
-    db.createReadStream({ gte: minValueKey, lte: maxValueKey })
-      .on('data', async data => {
-        results.push({
-          id: getIdFromProofValueKey(data.key),
-          proof: data.value.toString()
-        })
-      })
-      .on('error', error => {
-        let err = `Error reading reputation item proofs range : ${error.message}`
-        return reject(err)
-      })
-      .on('end', async () => {
-        return resolve(results)
-      })
-  })
-}
-
-// #endregion REPUTATION ITEM FUNCTIONS
-
-/****************************************************************************************************
  * USAGE TOKEN FUNCTIONS
  ****************************************************************************************************/
 // #region USAGE TOKEN FUNCTIONS
@@ -787,14 +556,6 @@ module.exports = {
   saveRecentHashDataAsync: saveRecentHashDataAsync,
   getCountMetricsAsync: getCountMetricsAsync,
   getRecentHashDataAsync: getRecentHashDataAsync,
-  getReputationItemsBetweenAsync: getReputationItemsBetweenAsync,
-  getMostRecentReputationItemAsync: getMostRecentReputationItemAsync,
-  getReputationItemByIdAsync: getReputationItemByIdAsync,
-  getReputationItemsRangeByIdsAsync: getReputationItemsRangeByIdsAsync,
-  saveReputationItemAsync: saveReputationItemAsync,
-  saveReputationItemProofAsync: saveReputationItemProofAsync,
-  getReputationItemProofByRepIdAsync: getReputationItemProofByRepIdAsync,
-  getReputationItemProofsRangeByRepIdsAsync: getReputationItemProofsRangeByRepIdsAsync,
   setUsageTokenAsync,
   getUsageTokenAsync,
   setAsync: setAsync,
