# server.js
@@ -21,7 +21,6 @@ const rocksDB = require('./lib/models/RocksDB.js')
 const utils = require('./lib/utils.js')
 const cachedProofs = require('./lib/cached-proofs.js')
 const cores = require('./lib/cores.js')
-const repChain = require('./lib/rep-chain.js')
 const usageToken = require('./lib/usage-token.js')
 const logger = require('./lib/logger.js')
 
@@ -110,10 +109,6 @@ async function startAsync() {
 
     // start the interval processes for saving event metrics data
     eventMetrics.startPersistDataInterval()
-
-    // start the reputation chain generation process
-    repChain.generateReputationEntryAsync()
-    repChain.startRepInterval()
 
     logger.info(`App : Startup : Complete`)
   } catch (err) {
